--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 anyio==3.6.1
 asgiref==3.5.2
+bcrypt==3.2.2
 certifi==2022.5.18.1
+cffi==1.15.0
 click==8.1.3
 colorama==0.4.4
 fastapi==0.78.0
+fastapi-jwt-auth==0.5.0
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
+passlib==1.7.4
+pycparser==2.21
 pydantic==1.9.1
+PyJWT==1.7.1
 pymongo==4.1.1
 python-dotenv==0.20.0
 PyYAML==6.0
