--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
 anyio==3.6.1
 asgiref==3.5.2
+async-timeout==4.0.2
 bcrypt==3.2.2
 certifi==2022.5.18.1
 cffi==1.15.0
 click==8.1.3
 colorama==0.4.4
+Deprecated==1.2.13
+dnspython==2.2.1
+email-validator==1.2.1
 fastapi==0.78.0
 fastapi-jwt-auth==0.5.0
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
+packaging==21.3
 passlib==1.7.4
 pycparser==2.21
 pydantic==1.9.1
 PyJWT==1.7.1
 pymongo==4.1.1
+pyparsing==3.0.9
 python-dotenv==0.20.0
 PyYAML==6.0
+redis==4.3.3
 sniffio==1.2.0
 starlette==0.19.1
 typing_extensions==4.2.0
@@ -24,3 +31,4 @@ uvicorn==0.17.6
 watchgod==0.8.2
 websockets==10.3
 wincertstore==0.2
+wrapt==1.14.1
